--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ Description: Awesome dude, awesome life
 <head>
 {% include head.html %}
 </head>
-<body class="post-template" itemscope itemtype="http://schema.org/WebPage">  
+<body class="post-template" itemscope itemtype="https://schema.org/WebPage">  
 
 <main id="summer-post-container" class="summer-post-container intro-effect-sliced" role="main">
     
