--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,5 +63,6 @@ Description: Awesome dude, awesome life
     {% include footer.html %}
 
 {% include scripts.html %}  
+{% include lightbox.html %}
 </body>
 </html>
