--- a/_includes/lightbox.html
+++ b/_includes/lightbox.html
@@ -27,10 +27,10 @@
     1px 1px 0 #000;  
 }
 
-{% if include.lightbox_captions == "false" %}.lightbox span {display: none;}{% endif %}
-{% if include.lightbox_captions == "true" %}.lightbox span {display: block;}{% endif %}
-{% if page.lightbox_captions == false %}.lightbox span {display: none;}{% endif %}
-{% if page.lightbox_captions == true %}.lightbox span {display: block;}{% endif %}
+.lightbox span {display: none;}
+
+
+
 
 .lightbox .videoWrapperContainer {
 	position: relative; 
